# multimodal-rag-test-bed

./: .gitignore  README.md  pyproject.toml
analysis/: latency_analysis.py  performance_analysis.py  performance_data.xlsx
analysis/latency/: latency_analysis_convfinqa.xlsx  latency_analysis_finqa.xlsx  latency_analysis_finreport.xlsx  latency_analysis_finslides.xlsx  latency_analysis_tatdqa.xlsx  latency_analysis_vqaonbd.xlsx
classification/: dataset.xlsx  train.py
dataset_curation/: create_dataset.py  performance_analysis.py
evaluation/: __main__.py  significance_tests.py
evaluation/retrieval/: __main__.py
generation/: Google.py  OpenRouter.py  Openai.py  __init__.py  generation.py
main/: dataset_loader.py  indexing_progress.py
main/baselines/: base_sparse_retrieval.py
main/embedders/: __init__.py  base_embedder.py
main/embedders/multimodal/: __init__.py  biqwen.py  colqwen.py  voyage.py
main/embedders/text/: __init__.py  colbert.py  linq.py  voyage.py
main/generation/: Claude.py  generation.py  prompt_optimization.py  prompts.py
main/pipelines/: __init__.py  indexing.py  preprocessor.py  retrieval.py
main/pipelines/base/: base_indexing.py  base_retrieval.py
main/pipelines/baselines/: base_sparse_retrieval.py
main/pipelines/text/: indexing.py  preprocessor.py  retrieval.py
main/pipelines/visual/: indexing.py  retrieval.py
main/preprocessing/: captioning.py  chunking.py  ocr.py  run.py
main/preprocessing/chunks/: finslides_chunks.json
main/preprocessing/texts/: finslides_chunks.json  finslides_full_text.json  vidore_test_full_text.json
main/vector_dabases/: __init__.py  base_database.py  pinecone_manager.py  qdrant_manager.py
results/: runtimes.txt
results/convfinqa/: expected_qrels_query.json  iterative_significance_tests_query.xlsx  retrieval_results.xlsx
results/convfinqa/MULTIMODAL-MULTI/: query.json
results/convfinqa/MULTIMODAL-SINGLE/: query.json
results/convfinqa/TEXT-MULTI/: query.json
results/convfinqa/TEXT-SINGLE/: query.json
results/finqa/: expected_qrels_query.json  iterative_significance_tests_query.xlsx  retrieval_results.xlsx
results/finreport/: expected_qrels_query.json  iterative_significance_tests_query.xlsx  iterative_significance_tests_rephrase_level_1.xlsx  iterative_significance_tests_rephrase_level_2.xlsx  iterative_significance_tests_rephrase_level_3.xlsx  retrieval_results.xlsx
results/finreport/MULTIMODAL-MULTI/: query.json  rephrase_level_1.json  rephrase_level_2.json  rephrase_level_3.json
results/finreport/MULTIMODAL-SINGLE/: query.json  rephrase_level_1.json  rephrase_level_2.json  rephrase_level_3.json
results/finreport/TEXT-MULTI/: query.json  rephrase_level_1.json  rephrase_level_2.json  rephrase_level_3.json
results/finreport/TEXT-SINGLE/: query.json  rephrase_level_1.json  (+2 more)
results/finslides/: expected_qrels_query.json  expected_qrels_rephrase_level_1.json  expected_qrels_rephrase_level_2.json  expected_qrels_rephrase_level_3.json  iterative_significance_tests_query.xlsx  iterative_significance_tests_rephrase_level_1.xlsx  iterative_significance_tests_rephrase_level_2.xlsx  iterative_significance_tests_rephrase_level_3.xlsx  retrieval_results.xlsx
results/tatdqa/: retrieval_results.xlsx
results/vqaonbd/: expected_qrels_query.json  iterative_significance_tests_query.xlsx  retrieval_results.xlsx
scripts/: ocr.sh
scripts/indexing/: multimodal-dense.sh
scripts/retrieval/: run_all.sh
utils/: extract_latency_results.py
(+200 files in other folders)
